tests/ui/consts/const_in_pattern/issue-78057.stderr
error: to use a constant of type `Opaque` in a pattern, `Opaque` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/issue-78057.rs:12:9
   |
LL |         FOO => {},
   |         ^^^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralEq.html for details

error: aborting due to previous error

